<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_8_dp">

    <TextView
        android:id="@+id/tv_lookingNumber"
        style="@style/Text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:text="@string/loockingNumb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="@string/text_tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_lookingNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv_lookingNumber"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/Text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="@string/text_tv_company"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <ImageView
        android:id="@+id/iv_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_company"
        app:layout_constraintStart_toEndOf="@+id/tv_company"
        app:layout_constraintTop_toTopOf="@+id/tv_company"
        app:srcCompat="@drawable/icon_check_mark" />

    <ImageView
        android:id="@+id/iv_helper_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        app:srcCompat="@drawable/icon_bag" />

    <TextView
        android:id="@+id/tv_experience"
        style="@style/Text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/text_tv_experience"
        app:layout_constraintBottom_toBottomOf="@+id/iv_helper_two"
        app:layout_constraintStart_toEndOf="@+id/iv_helper_two"
        app:layout_constraintTop_toTopOf="@+id/iv_helper_two" />

    <TextView
        android:id="@+id/tv_data"
        style="@style/Text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="@string/text_tv_data"
        app:layout_constraintStart_toStartOf="@+id/iv_helper_two"
        app:layout_constraintTop_toBottomOf="@+id/iv_helper_two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bv_responses"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bottom_selector_green"
        android:gravity="center"
        android:text="@string/text_bv_responses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/Text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_tv_address"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/ic_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_heart" />
</androidx.constraintlayout.widget.ConstraintLayout>